iniciando parte dos

--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
       </div>
      </div>
      </section>
-	
+
+<section class="parte-rosa">
+	<div class="container">
       <div class="row">
       <div class="col s7 push-s5">
       <span class="flow-text">
-      <img src="img/yoga.jpg"></span>
+      <img class="img-mujer" src="img/yoga.jpg"></span>
       </div>
 
       <div class="col s5 pull-s7">
@@ -78,7 +80,30 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, laboriosam, aliquam laudantium dolore voluptatibus animi accusantium, voluptat.</p>
       </span></div>
     </div>
+	</div>
+	</section>
 
+
+<section class="parte-rosa">
+	<div class="container">
+      <div class="row">
+
+      <div class="col s5 pull-s7">
+      
+      <span class="flow-text">
+      <img class="img-reloj" src="img/apple-watch.jpg"></span>
+      </div>
+
+  <div class="col s7 push-s5">
+      <span class="flow-text">
+      <h3>IT´S ALL ABOUT</h3>
+      <h2>FITNESS FIRST</h2>
+      <img src="img/drop-muted.png">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, laboriosam, aliquam laudantium dolore voluptatibus animi accusantium, voluptat.</p>
+      </span></div>
+    </div>
+	</div>
+	</section>
       
 
 
